frontend/src/index.css
@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");

@import "tailwindcss";

.font-montserrat {
  font-family: "Montserrat", cursive;
}

/* width */
::-webkit-scrollbar {
  width: 5px;
  height: 3px;
  padding: 1px;
}

/* Track */
::-webkit-scrollbar-track {
  background: #56555500;
}

/* Handle */
::-webkit-scrollbar-thumb {
  background: #ffc20d;
  border-radius: 10px;
}

/* Handle on hover */
::-webkit-scrollbar-thumb:hover {
  background: #a47d08;
}

/* For hiding scroll bar */
/*this css setting will interrupt during building a dist file, it will not stop the process but will give error*/
@layer utilities {
  @variants responsive {
    /* Hide scrollbar for Chrome, Safari, and Opera */
    .no-scrollbar::-webkit-scrollbar {
      display: none;
    }

    /* Hide scrollbar for IE, Edge, and Firefox */
    .no-scrollbar {
      -ms-overflow-style: none;
      /* IE and Edge */
      scrollbar-width: none;
      /* Firefox */
    }
  }
}

.no-scrollbar::-webkit-scrollbar {
  display: none;
}

